# qt5gtk3

./: CMakeLists.txt
.github/workflows/: codeql.yml
cmake/: FindQtPluginDirs.cmake  tristate.cmake
platformtheme/: CMakeLists.txt  gtk3.json  main.cpp  qgtk3colorscheme_p.h  qgtk3dialoghelpers.cpp  qgtk3dialoghelpers.h  qgtk3interface.cpp  qgtk3interface_p.h  qgtk3json.cpp  qgtk3json_p.h  qgtk3portalinterface.cpp  qgtk3portalinterface_p.h  qgtk3storage.cpp  qgtk3storage_p.h  qgtk3theme.cpp  qgtk3theme.h
